--- a/settings.json
+++ b/settings.json
@@ -13,7 +13,7 @@
 	"ownerNumberr": "917025770987",
 	"cr": "ᴹᴿ᭄ 𝗚𝗼𝘂𝗿𝗮𝘃 ×፝֟͜×",
 	"ownername": "ᴹᴿ᭄ 𝗚𝗼𝘂𝗿𝗮𝘃 ×፝֟͜×",
-	"botname":"GOURAV",
+	"botname":"http://ī.am/𝗚𝗼𝘂𝗿𝗮𝘃",
 	"thumb":"thumbnail_1.jpg",
 	"thumbnail":"thumbnail_2_1.jpg",
 	"fakethumb":"thumbnail_1.jpg", 
